Bug 377229 - Selecting LZW TIFF compression makes Krita save tiled garbage instead of an image
Summary: Selecting LZW TIFF compression makes Krita save tiled garbage instead of an i...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR grave
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-05 09:57 UTC by Dmitry Kazakov
Modified: 2017-04-21 11:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Loaded TIFF image (336.44 KB, image/png)
2017-03-05 09:57 UTC, Dmitry Kazakov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2017-03-05 09:57:33 UTC
Created attachment 104376 [details]
Loaded TIFF image

1) Create a 8-bit image
2) Draw something
3) Save into TIFF with LZW compression
4) Close Krita
5) Open the image, you'll see a garbage instead of the image



Bug 374958 is related, but a bit different. When you use 16/32 colorspace, Krita saves garbage not depending on the kind of compression.
Comment 1 Halla Rempt 2017-03-16 11:36:39 UTC
Okay, this is a regression in master, it works in 3.1.2
Comment 2 Dmitry Kazakov 2017-04-21 11:03:04 UTC
Git commit 7e68041f796e4cf23cc3427b4ba6f46d6a098f69 by Dmitry Kazakov.
Committed on 21/04/2017 at 11:02.
Pushed by dkazakov into branch 'master'.

Fix saving of TIFF files

Don't use ad-hoc conversion between KisPropertiesConfiguration and
KisTIFFOptions, but use a centralized functions instead. Then you
can clearly see that '+1' in is forgotten for predictor and faxmode! :)

M  +8    -55   plugins/impex/tiff/kis_dlg_options_tiff.cpp
M  +0    -1    plugins/impex/tiff/kis_dlg_options_tiff.h
M  +57   -1    plugins/impex/tiff/kis_tiff_converter.cc
M  +12   -9    plugins/impex/tiff/kis_tiff_converter.h
M  +3    -51   plugins/impex/tiff/kis_tiff_export.cc

https://commits.kde.org/krita/7e68041f796e4cf23cc3427b4ba6f46d6a098f69