Fix saving of TIFF files

Don't use ad-hoc conversion between KisPropertiesConfiguration and
KisTIFFOptions, but use a centralized functions instead. Then you
can clearly see that '+1' in is forgotten for predictor and faxmode! :)

BUG:377229